gcc_42/gcc/testsuite/gcc.apple/objc-negtest.c
/* APPLE LOCAL begin radar 4122328 */
/* { dg-options "-fasm-blocks" } */
@class NSString; /* { dg-error "expected identifier or '\\(' before '@' token" } */

int main()
{
}
/* APPLE LOCAL end radar 4122328 */
